<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/kalsym_logo"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/kalsym_logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kalsym_title"
        android:textStyle="bold"
        android:text="@string/kalsym_title"
        android:layout_below="@id/kalsym_logo"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:letterSpacing="0.1"
        />

    <TextView
        android:id="@+id/verification_headline"
        android:layout_below="@id/kalsym_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kalsym_verification"
        android:layout_marginHorizontal="32dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginVertical="5dp"
        />

<!--    style="@style/TextAppearance.MaterialComponents.Headline6"-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verification_phone_no_layout"
        android:layout_below="@+id/verification_headline"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="30dp"
        app:prefixTextAppearance="@style/PrefixText.PhoneCallVerification"
        android:hint="@string/phone"
        app:startIconDrawable="@drawable/ic_phone_black_24dp"
        app:startIconTint="?attr/colorPrimary"
        app:boxBackgroundColor="#FFF"
        app:boxStrokeWidth="2dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="18sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_below_number"
        android:id="@+id/label_below_number"
        android:layout_below="@id/verification_phone_no_layout"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="32dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verification_verify_button"
        android:layout_below="@+id/label_below_number"
        android:text="@string/verify"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="30dp"
        app:cornerRadius="25dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>